<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/address_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_button" />

    <TextView
        android:id="@+id/mail_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_name_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/mail_name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:inputType="text"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/mailNameDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:contentDescription="@string/mail_name_label"
        android:src="@android:drawable/divider_horizontal_dark" />

    <TextView
        android:id="@+id/delivery_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/delivery_address_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/deliveryAddressDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:contentDescription="@string/delivery_address_label"
        android:src="@android:drawable/divider_horizontal_dark" />

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/title_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/titleDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:contentDescription="@string/title_label"
        android:src="@android:drawable/divider_horizontal_dark" />

    <TextView
        android:id="@+id/body_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/body_text"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:inputType="text"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/bodyDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_margin="5dip"
        android:gravity="fill_horizontal"
        android:scaleType="fitXY"
        android:contentDescription="@string/body_label"
        android:src="@android:drawable/divider_horizontal_dark" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button" />

</LinearLayout>